// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Unit Test> Join Route should be able to create the player and add them to the game on submit 1`] = `
<div
  class="container"
  data-testid="join-page"
>
  <h1>
    Join Game
  </h1>
  <span>
    Enter your info and we can get this party started
  </span>
  <form
    data-testid="join-form"
  >
    <div
      class="stack-y-2"
    >
      <label>
        <span
          class="stack-x-1"
        >
          Game id:
        </span>
        <strong>
          1234
        </strong>
      </label>
    </div>
    <div
      class="stack-y-2"
    >
      <label>
        <span
          class="stack-x-1"
        >
          Player name:
        </span>
        <input
          data-testid="player-name"
          type="text"
        />
      </label>
    </div>
    <div>
      <button
        class="pure-button pure-button-primary"
        data-testid="join-submit"
      >
        Join the game
      </button>
    </div>
  </form>
</div>
`;

exports[`<Unit Test> Join Route should render a strong gameId if provided 1`] = `
<div
  class="container"
  data-testid="join-page"
>
  <h1>
    Join Game
  </h1>
  <span>
    Enter your info and we can get this party started
  </span>
  <form
    data-testid="join-form"
  >
    <div
      class="stack-y-2"
    >
      <label>
        <span
          class="stack-x-1"
        >
          Game id:
        </span>
        <strong>
          1234
        </strong>
      </label>
    </div>
    <div
      class="stack-y-2"
    >
      <label>
        <span
          class="stack-x-1"
        >
          Player name:
        </span>
        <input
          data-testid="player-name"
          type="text"
        />
      </label>
    </div>
    <div>
      <button
        class="pure-button pure-button-primary"
        data-testid="join-submit"
      >
        Join the game
      </button>
    </div>
  </form>
</div>
`;

exports[`<Unit Test> Join Route should render the form with a game id input if no id is provided 1`] = `
<div
  class="container"
  data-testid="join-page"
>
  <h1>
    Join Game
  </h1>
  <span>
    Enter your info and we can get this party started
  </span>
  <form
    data-testid="join-form"
  >
    <div
      class="stack-y-2"
    >
      <label>
        <span
          class="stack-x-1"
        >
          Game id:
        </span>
        <input
          data-testid="game-id"
          type="text"
        />
      </label>
    </div>
    <div
      class="stack-y-2"
    >
      <label>
        <span
          class="stack-x-1"
        >
          Player name:
        </span>
        <input
          data-testid="player-name"
          type="text"
        />
      </label>
    </div>
    <div>
      <button
        class="pure-button pure-button-primary"
        data-testid="join-submit"
      >
        Join the game
      </button>
    </div>
  </form>
</div>
`;
